# ish

./: .gitignore  Main.hs  Makefile  README.org  ish.cabal
