name:                ish
version:             0.1.0.0
synopsis:            Shell written in Haskell
homepage:            github.com/WolfeCub/ish
author:              Josh Wolfe
build-type:          Simple
extra-source-files:  ChangeLog.md, README.org
cabal-version:       >=1.10

executable ish
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, process >=1.4 && <1.5, directory >=1.2 && <1.3, haskeline >=0.7 && <0.8
  default-language:    Haskell2010
